Add the -i option for incremental backup mode

--- a/README
+++ b/README
@@ -22,12 +22,13 @@ You can see an example of tumblr_backup’s output on my home page.
 
 2.1. Synopsis
 
-tumblr_backup.py [-q] [-n post-count] [-s start-post] [-p y|m|d|YYYY[MM[DD]]] [-t] [blog-name] ...
+tumblr_backup.py [-q] [-i] [-n post-count] [-s start-post] [-p y|m|d|YYYY[MM[DD]]] [-t] [blog-name] ...
 
 
 2.2. Options
 
   • -q: Suppress the progress display.
+  • -i: Incremental backup.
   • -n post-count: Stop backing up after post-count posts.
   • -s start-post: Start backing up at the start-post’th post.
   • -p period: Limit the backup to the given period. These are ways to define
@@ -88,6 +89,9 @@ million bytes in their database. tumblr_backup restores the image extensions.
 If an image is already backed up, it is not downloaded again. The image
 extension determination only downloads the first 32 bytes of the image.
 
+In incremental backup mode, tumblr_backup saves only posts that have higher ids
+than the highest id in the posts folder. No index files are updated.
+
 In order to limit the set of backed up posts, use the -n and -s options. The
 most recent post is always number 0, so the option -n 200 would select the 200
 most recent posts. Calling tumblr_backup -n 100 -s 200 would skip the 200 most
@@ -98,7 +102,7 @@ With option -p, a separate archive page is generated for the selected period.
 This page has the name period-period.html. Any other index or archive pages are
 left alone.
 
-If you combine -n and/or -s with -p, only posts matching both criteria will be
+If you combine -n, -s, -i and -p, only posts matching all criteria will be
 backed up.
 
 In order to successfully backup your blog theme with -t, you need to define
