--- a/README
+++ b/README
@@ -22,13 +22,15 @@ You can see an example of tumblr_backup’s output on my home page.
 
 2.1. Synopsis
 
-tumblr_backup.py [-q] [-i] [-n post-count] [-s start-post] [-p y|m|d|YYYY[MM[DD]]] [-t] [blog-name] ...
+tumblr_backup.py [-qixt] [-n post-count] [-s start-post] [-p y|m|d|YYYY[MM[DD]]] [blog-name] ...
 
 
 2.2. Options
 
   • -q: Suppress the progress display.
   • -i: Incremental backup.
+  • -x: XML backup.
+  • -t: Include the theme in the backup.
   • -n post-count: Stop backing up after post-count posts.
   • -s start-post: Start backing up at the start-post’th post.
   • -p period: Limit the backup to the given period. These are ways to define
@@ -39,7 +41,6 @@ tumblr_backup.py [-q] [-i] [-n post-count] [-s start-post] [-p y|m|d|YYYY[MM[DD]
       □ yyyy: the given year
       □ yyyy-mm: the given month
       □ yyyy-mm-dd: the given day
-  • -t: Include the theme in the backup
 
 2.3. Arguments
 
@@ -73,6 +74,9 @@ The generated directory structure looks like this:
         images/
             <image.ext> - the image files
             …
+        xml/
+            <id>.xml - the raw XML posts
+            …
         theme/
             _local.css - the local style sheet
             theme.html - the saved HTML template
@@ -90,7 +94,10 @@ If an image is already backed up, it is not downloaded again. The image
 extension determination only downloads the first 32 bytes of the image.
 
 In incremental backup mode, tumblr_backup saves only posts that have higher ids
-than the highest id in the posts folder. No index files are updated.
+than the highest id saved yet. No index files are updated.
+
+In XML backup mode, the original XML source returned by the Tumblr API is
+saved. Images are not downloaded, and no index files are updated.
 
 In order to limit the set of backed up posts, use the -n and -s options. The
 most recent post is always number 0, so the option -n 200 would select the 200
