Make -x save the raw XML posts in addition to the HTML ones
Formerly, -x backed up XML instead of HTML. No need to query the server
twice to backup both formats.

--- a/README
+++ b/README
@@ -29,7 +29,7 @@ tumblr_backup.py [-qixt] [-n post-count] [-s start-post] [-p y|m|d|YYYY[MM[DD]]]
 
   • -q: Suppress the progress display.
   • -i: Incremental backup.
-  • -x: XML backup.
+  • -x: Include the original XML in the backup.
   • -t: Include the theme in the backup.
   • -n post-count: Stop backing up after post-count posts.
   • -s start-post: Start backing up at the start-post’th post.
@@ -75,7 +75,7 @@ The generated directory structure looks like this:
             <image.ext> - the image files
             …
         xml/
-            <id>.xml - the raw XML posts
+            <id>.xml - the original XML posts
             …
         theme/
             _local.css - the local style sheet
@@ -96,8 +96,8 @@ extension determination only downloads the first 32 bytes of the image.
 In incremental backup mode, tumblr_backup saves only posts that have higher ids
 than the highest id saved yet. No index files are updated.
 
-In XML backup mode, the original XML source returned by the Tumblr API is
-saved. Images are not downloaded, and no index files are updated.
+In XML backup mode, the original XML source returned by the Tumblr API is saved
+under the xml/ folder in addition to the HTML format.
 
 In order to limit the set of backed up posts, use the -n and -s options. The
 most recent post is always number 0, so the option -n 200 would select the 200
