--- a/README
+++ b/README
@@ -64,10 +64,7 @@ The generated directory structure looks like this:
         archive/
             <yyyy-mm>.html - the monthly pages
             …
-            period-<yyyy>.html - the index of a yearly period
-            period-<yyyy-mm>.html - the index of a monthly period
-            period-<yyyy-mm-dd>.html - the index of a single day
-            …
+            current.html - the index of the latest -p or -i backup
         posts/
             <id>.html - the single post pages
             …
@@ -94,7 +91,8 @@ If an image is already backed up, it is not downloaded again. The image
 extension determination only downloads the first 32 bytes of the image.
 
 In incremental backup mode, tumblr_backup saves only posts that have higher ids
-than the highest id saved yet. No index files are updated.
+than the highest id saved locally. archive/current.html is overwritten. Any
+other index or archive pages are left alone.
 
 In XML backup mode, the original XML source returned by the Tumblr API is saved
 under the xml/ folder in addition to the HTML format.
@@ -105,9 +103,8 @@ most recent posts. Calling tumblr_backup -n 100 -s 200 would skip the 200 most
 recent posts and backup the next 100. The generated index will just contain
 links to the posts selected.
 
-With option -p, a separate archive page is generated for the selected period.
-This page has the name period-period.html. Any other index or archive pages are
-left alone.
+With option -p, archive/current.html is overwritten. Any other index or archive
+pages are left alone.
 
 If you combine -n, -s, -i and -p, only posts matching all criteria will be
 backed up.
