Add the -b option for Blosxom output format
This format also requires the Blosxom "meta" plugin.

--- a/README
+++ b/README
@@ -13,16 +13,17 @@ You can see an example of tumblr_backup’s output on my home page.
  2. Install xmltramp.py somewhere on your Python path like /usr/local/lib/
     python2.6/dist-packages.
  3. Download and unzip tumblr_backup.zip.
- 4. Copy tumblr_backup.py to a directory on your $PATH like ~/bin or /usr/local
-    /bin.
+ 4. Copy or symlink tumblr_backup.py to a directory on your $PATH like ~/bin or
+    /usr/local/bin.
  5. Run tumblr_backup.py blog-name as often as you like manually or from a cron
-    job.
+    job. The recommendation is to do a daily incremental backup and a weekly
+    complete one to update the index.
 
 2. Usage
 
 2.1. Synopsis
 
-tumblr_backup.py [-qixt] [-n post-count] [-s start-post] [-p y|m|d|YYYY[MM[DD]]] [blog-name] ...
+tumblr_backup.py [-qixtb] [-n post-count] [-s start-post] [-p y|m|d|YYYY[MM[DD]]] [blog-name] ...
 
 
 2.2. Options
@@ -31,6 +32,7 @@ tumblr_backup.py [-qixt] [-n post-count] [-s start-post] [-p y|m|d|YYYY[MM[DD]]]
   • -i: Incremental backup.
   • -x: Include the original XML in the backup.
   • -t: Include the theme in the backup.
+  • -b: Change the output format to Blosxom.
   • -n post-count: Stop backing up after post-count posts.
   • -s start-post: Start backing up at the start-post’th post.
   • -p period: Limit the backup to the given period. These are ways to define
@@ -87,8 +89,7 @@ a simple style to the saved pages. All generated pages are HTML5.
 
 Tumblr saves most image files without extension. This probably saves a few
 million bytes in their database. tumblr_backup restores the image extensions.
-If an image is already backed up, it is not downloaded again. The image
-extension determination only downloads the first 32 bytes of the image.
+If an image is already backed up, it is not downloaded again.
 
 In incremental backup mode, tumblr_backup saves only posts that have higher ids
 than the highest id saved locally. archive/current.html is overwritten. Any
@@ -96,6 +97,12 @@ other index or archive pages are left alone.
 
 In XML backup mode, the original XML source returned by the Tumblr API is saved
 under the xml/ folder in addition to the HTML format.
+
+In Blosxom format mode, the posts generated are saved in a format suitable for
+re-publishing in Blosxom with the Meta plugin. Images are not downloaded;
+instead, the image links point back to the original image on Tumblr. The posts
+are saved in the current folder with a .txt extension. The index is not
+updated.
 
 In order to limit the set of backed up posts, use the -n and -s options. The
 most recent post is always number 0, so the option -n 200 would select the 200
